email entegration completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/northwind
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.jpa.properties.javax.persistence.validation.mode = none
+spring.mail.password=ihzz hhmd nzqi ihvc
+spring.mail.host=smtp.gmail.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.username=gokseldogandev@gmail.com
+spring.mail.port=587
